--- a/src/app/styles/custom.css
+++ b/src/app/styles/custom.css
@@ -10,3 +10,25 @@
 .typeahead-search-item strong{
   color: #0099cc !important;
 }
+.zoom {
+  display:inline-block;
+  position: relative;
+}
+
+/* magnifying glass icon */
+.zoom:after {
+  content:'';
+  display:block;
+  width:33px;
+  height:33px;
+  position:absolute;
+  top:0;
+  right:0;
+  background:url(icon.png);
+}
+
+.zoom img {
+  display: block;
+}
+
+.zoom img::selection { background-color: transparent; }
