--- a/src/app/views/prelogin/login/login.html
+++ b/src/app/views/prelogin/login/login.html
@@ -60,7 +60,7 @@
                   <span class="flot-right need_help"><a href="#">Forgot Password?</a></span>
                 </div>
                 <hr>
-                <button type="submit" class="btn btn-default flot-right sign_mybtn">Sign In</button>
+                <button type="submit" ng-click="login()" class="btn btn-default flot-right sign_mybtn">Sign In</button>
               </form>
             </div>
           </div>
