--- a/src/app/views/dashboard/dashboard.html
+++ b/src/app/views/dashboard/dashboard.html
@@ -7,14 +7,14 @@
         <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 filter_side">
           <ul class="nav nav-pills nav-stacked my-verti-tab">
             <li class="active">
-              <a data-toggle="pill" href="#dash">
+              <a data-toggle="pill" href="/#/dashboard">
                 <i class="fa fa-th-large my-verti-icon"></i>
 
                 Dashboard</a></li>
             <li><a data-toggle="pill" href="#mycat">
               <i class="fa fa-heart my-verti-icon"></i>
               My Catalog</a></li>
-            <li><a data-toggle="pill" href="#jobsite">
+            <li><a data-toggle="pill" href="/#/manage/job-sites">
               <i class="fa fa-map-marker my-verti-icon"></i>
               Manage Job Sites</a></li>
             <li><a data-toggle="pill" href="#myalc">
