--- a/src/app/views/prelogin/login/login.html
+++ b/src/app/views/prelogin/login/login.html
@@ -46,14 +46,13 @@
             <div class="col-lg-12 welcome_title">Welcome back!<span class="flot-right need_help"><a href="#">Need Help?</a></span></div>
 
             <div class="col-lg-12">
-              <form role="form">
-                <div class="form-group">
-
-                  <input type="email" class="form-control" id="email" placeholder="Phone, email or username">
+              <form role="form" name="loginForm" novalidate valdr-type="User">
+                <div class="form-group" valdr-form-group>
+                  <input type="email"  autocomplete="off" class="form-control" ng-model="email" name="email" ng-required="true"  placeholder="Phone, email or username">
                 </div>
-                <div class="form-group">
+                <div class="form-group" valdr-form-group>
 
-                  <input type="password" class="form-control" id="pwd" placeholder="password">
+                  <input type="password"  autocomplete="off" name="password" ng-model="password" ng-required="true" class="form-control"  placeholder="password">
                 </div>
                 <div class="checkbox">
                   <label><input type="checkbox"> Remember me</label>
